--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-to-pdf": "^1.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
