--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="true" />
-
     <uses-feature android:name="android.hardware.camera.any" />
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -23,6 +22,10 @@
         android:supportsRtl="true"
         android:theme="@style/LaunchTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false"
+            android:theme="@style/LaunchTheme" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
