--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --ext js,mjs,cjs,json,env,local server.js"
+    "start": "nodemon --ext js,mjs,cjs,json,env,local server.js",
+    "debug" : "node server.js"
   },
   "author": "",
   "license": "ISC",
