--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -22,6 +22,7 @@
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.1",
     "react-to-pdf": "^1.0.1",
     "yup": "^1.4.0"
