--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --ext js,mjs,cjs,json,env,local server.js",
-    "debug" : "node server.js"
+    "debug": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +13,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
     "yup": "^1.4.0"
