--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -22,10 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/LaunchTheme"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false"
-            android:theme="@style/LaunchTheme" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -36,6 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".QRLoadActivity" />
     </application>
 
 </manifest>
