--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "qrcode": "^1.5.4",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
     "yup": "^1.4.0"
