--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "material-ui-confirm": "^3.0.16",
     "notistack": "^3.0.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
